<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="com.ghteam.eventgo.ui.activity.singup.SignUpActivity">

    <data>

        <variable
            name="viewModel"
            type="com.ghteam.eventgo.ui.activity.singup.SignUpViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_app_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/et_first_name"
                style="@style/EditTextProfileSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:hint="@string/hint_first_name"

                android:inputType="textPersonName"
                android:text="@={viewModel.userData.firstName}" />

            <EditText
                android:id="@+id/et_last_name"
                style="@style/EditTextProfileSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:text="@={viewModel.userData.lastName}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/birthday"
                android:textColor="#eee"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="10 october 2001"
                android:textColor="#eee"
                android:textSize="20sp"
                android:textStyle="italic" />

            <EditText
                android:layout_margin="3dp"
                android:id="@+id/et_email"
                style="@style/EditTextProfileSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_margin="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_password"
                    style="@style/EditTextProfileSettings"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_margin="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_repeat_password"
                    style="@style/EditTextProfileSettings"
                    android:hint="@string/hint_repeat_password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.copyOfPassword}" />

            </FrameLayout>


            <Button
                android:id="@+id/bt_submit"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/submit" />

        </LinearLayout>
    </RelativeLayout>
</layout>
